# people-alarm

./: .gitignore  README.md  gg.bat
image-scan/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  image-scan.sln  image-scan.vcxproj  image-scan.vcxproj.filters  main.cpp
image-scan/Debug/: kernel.cl
image-scan/image-scan.dir/Debug/: image-scan.exe.recipe  image-scan.ilk
image-scan/image-scan.dir/Debug/image-scan.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  image-scan.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
image-scan/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
image-scan/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
image-scan/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
image-scan/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
